# med-ai

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  NOTICE  README.md  config.py  docker-compose.grafana.yml  docker-compose.kafka.yml  docker-compose.loki.yml  docker-compose.otel.yml  docker-compose.redis.yml  docker-compose.services.yml  pyproject.toml  start_all.py
app_01_ed_triage/: README.md
app_01_ed_triage/frontend/: index.html  package.json  vite.config.ts
app_02_sepsis_icu/: README.md  requirements.txt
app_02_sepsis_icu/frontend/: package.json
app_03_hospital_ops/: README.md
app_04_oncology_ai/: README.md
app_06_clinical_chat/backend/: chat_engine.py  intents.py  main.py  sim_context.py
app_08_bed_management/docs/: SYSTEM_DESIGN.md
app_09_waiting_list/docs/: SYSTEM_DESIGN.md
dashboard/: index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
dashboard/src/: App.tsx  (+1 more)
deploy/: README.md
docker/: Dockerfile.base  Dockerfile.dashboard  Dockerfile.service
docs/: AI_Clinical_Documentation_Research.md  ARCHITECTURAL_ROADMAP.md  ARCHITECTURE.md  CHAT_LATENCY_PLAN.md  CROSS_MODULE_DATA_FLOW.md  DATASET_PLAN.md  DATA_ACCESS.md  HSE_Pulse_Architectural_Review.md  HSE_Pulse_Deployment_Readiness_Assessment.md  INCIDENT_DATA_NOT_FLOWING.md  MODELS.md  ROADMAP.md  SYSTEM_ARCHITECTURE_AUDIT.md  SYSTEM_DESIGN.md  TECHNICAL_DOCUMENTATION.md  TECHNICAL_OVERVIEW.md  irish_hospital_ai_strategy_report.md  model-registry.md  research_ai_waiting_list_management.md
scripts/: build_all_datasets.py  find_demo_patient.py  monitor_simulation.py  start_all_services.py  train_all_models.py  ui_consistency_monitor.py
tests/: conftest.py
(+211 files in other folders)
